Unit tests added
Minor optimisation